# Openffboard-gamesettings

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
src/offbgamessettings/: __init__.py  __main__.py  config_manager.py  config_orchestrator.py  console_ui.py  core.py  game_discovery.py  output.py  utils.py
src/offbgamessettings/game_configurators/: __init__.py  base_configurator.py  dirt_wrc_configurator.py  factory.py  recommendation_configurator.py  rfactor2_configurator.py
tests/: test_config_orchestrator_pytest.py  test_console_ui_pytest.py  test_core.py  test_dirt_wrc_pytest.py  test_factory_pytest.py  test_game_discovery_pytest.py  test_recommendation_pytest.py  test_rfactor2_pytest.py  test_utils_pytest.py
