[project]
name = "offbgamessettings"
version = "0.0.1"
description = "Utilities to manage game settings for OpenNFF Board"
readme = "README.md"
authors = [ { name = "Your Name", email = "you@example.com" } ]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "vdf",
    "colorama",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[project.scripts]
offbgamessettings = "offbgamessettings.__main__:main"
