[project]
name = "OpenFFBoard Game Settings"
version = "1.0.0"
description = "Utilities to manage game settings for OpenFFBoard"
readme = "README.md"
authors = [ { name = "Vincent MANOUKIAN", email = "manoukianv@gmail.com" } ]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "vdf",
    "colorama",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[project.scripts]
offbgamessettings = "offbgamessettings.__main__:main"
